syntax = "proto3";

package com.lanjiu.pro.business;

option optimize_for = SPEED;
option java_package = "com.lanjiu.pro.business";
option java_outer_classname = "BusinessProtocolEntities";

// 游客用户实体
message TouristsUser {
    // 游客用户ID
    string temporary_id = 1;

    // 游客用户昵称
    string nickname = 2;

    // 游客用户头像
    string avatar = 3;
}

// 注册用户实体
message RegisteredUser {
    // 注册用户ID
    string user_id = 1;

    // 密码
    string secret = 2;

    // 注册用户昵称
    string nickname = 3;

    // 注册用户手机号码
    string phone = 4;

    // 头像
    string avatar = 5;

    // 验证码
    string captcha = 6;
}

// 好友实体(游客)
message TouristsFriend {
    // 好友ID
    string friend_id = 1;

    // 好友用户ID
    string friend_user_id = 2;

    // 好友昵称
    string friend_nickname = 3;

    // 好友头像
    string friend_avatar = 4;

    // 好友备注
    string friend_alias = 5;

    // 好友用户类型
    string user_type = 6;

    // 在线状态
    string online_status = 7;

    // 好友设置
    Settings settings = 8;
}

// 好友实体(注册用户)
message RegisteredFriend {
    // 好友ID
    string friend_id = 1;

    // 好友用户ID
    string friend_user_id = 2;

    // 好友昵称
    string friend_nickname = 3;

    // 好友头像
    string friend_avatar = 4;

    // 好友备注
    string friend_alias = 5;

    // 好友用户类型
    string user_type = 6;

    // 在线状态
    string online_status = 7;

    // 好友设置
    Settings settings = 8;
}

// 群组实体(游客)
message TouristsGroup {
    // 群组ID
    string group_id = 1;

    // 群组名称
    string group_name = 2;

    // 群人数
    int32 member_count = 3;

    // 群类型(游客用户群，注册用户群，混合群)
    string group_type = 4;

    // 群公告
    GroupAnnouncements group_announcements = 5;

    // 群设置
    Settings settings = 6;
}

// 群组实体(注册用户)
message RegisteredGroup {
    // 群组ID
    string group_id = 1;

    // 群组名称
    string group_name = 2;

    // 群人数
    int32 member_count = 3;

    // 群类型(游客用户群，注册用户群，混合群)
    string group_type = 4;

    // 群公告
    GroupAnnouncements group_announcements = 5;

    // 群设置
    Settings settings = 6;
}

// 群成员实体(游客)
message TouristsGroupMember {
    // 群成员ID
    string group_member_id = 1;

    // 群成员用户ID
    string group_member_user_id = 2;

    // 群成员名称
    string group_member_name = 3;

    // 群成员昵称
    string group_member_avatar = 4;

    // 群成员身份(0:成员，1:群主)
    int32 group_member_type = 5;

    // 群成员昵称
    string group_member_nick = 6;

    // 群成员自定义备注
    string group_member_alias = 7;

    // 群成员用户类型
    string user_type = 8;

    // 在线状态
    string online_status = 9;

    // 所在群组(游客群，注册群)
    TouristsGroup group = 10;
}

// 群成员实体(注册用户)
message RegisteredGroupMember {
    // 群成员ID
    string group_member_id = 1;

    // 群成员用户ID
    string group_member_user_id = 2;

    // 群成员名称
    string group_member_name = 3;

    // 群成员昵称
    string group_member_avatar = 4;

    // 群成员身份(0:成员，1:群主)
    int32 group_member_type = 5;

    // 群成员昵称
    string group_member_nick = 6;

    // 群成员自定义备注
    string group_member_alias = 7;

    // 群成员用户类型
    string user_type = 8;

    // 在线状态
    string online_status = 9;

    // 所在群组(游客群，注册群)
    RegisteredGroup group = 10;
}

//群公告结构体
message GroupAnnouncements {
    // 群公告ID
    string announcement_id = 1;

    //群公告标题
    string announcement_title = 2;

    //群公告内容
    string announcement_content = 3;
}

// 用户设置信息实体
message Settings {
    // 是否接收离线消息
    bool offline_message = 1;

    // 阅后即焚
    bool snapchat_status = 2;

    // 阅后即焚时长
    int32 snapchat_time_length = 3;

    // 阅后即焚时间单位
    int32 snapchat_time_unit = 4;

    // 是否开启退出清理
    bool exit_clean = 5;

    // 定期清理（0:每月，1:每周，2:每天）
    int32 timer_clean = 6;

    //用户在线状态
    bool online_status = 7;
}

// 通知结构体(游客)
message TouristsNotify {
    // 消息类型（好友/群组）
    int32 notify_type = 1;

    // 好友申请通知实体
    TouristsFriendNotify friend_notify = 2;

    // 群通知
    TouristsGroupNotify group_notify = 3;
}

// 通知结构体(注册用户)
message RegisteredNotify {
    // 消息类型（好友/群组）
    int32 notify_type = 1;

    // 好友申请通知实体
    RegisteredFriendNotify friend_notify = 2;

    // 群通知
    RegisteredGroupNotify group_notify = 3;
}

// 好友申请通知(游客)
message TouristsFriendNotify {
    // 申请状态(申请/拒绝申请/同意申请)
    int32 status = 1;

    // 好友实体
    TouristsFriend friend = 2;

    // 留言
    string leave_message = 3;
}

// 好友申请通知(注册用户)
message RegisteredFriendNotify {
    // 申请状态(申请/拒绝申请/同意申请)
    int32 status = 1;

    // 好友实体
    RegisteredFriend friend = 2;

    // 留言
    string leave_message = 3;
}

// 群通知(游客)
message TouristsGroupNotify {
    // 类型(申请/邀请)
    int32 type = 1;

    // 申请状态(申请/拒绝/同意)
    int32 status = 2;

    // 群成员实体
    TouristsGroupMember group_member = 3;

    // 留言
    string leave_message = 4;
}

// 群通知(注册用户)
message RegisteredGroupNotify {
    // 类型(申请/邀请)
    int32 type = 1;

    // 申请状态(申请/拒绝/同意)
    int32 status = 2;

    // 群成员实体
    RegisteredGroupMember group_member = 3;

    // 留言
    string leave_message = 4;
}

// 系统通知结构体
message SysNotify {
    // 通知ID
    string notify_id = 1;

    // 通知标题
    string title = 2;

    // 通知内容
    string content = 3;

    // 通知作者
    string author = 4;

    // 通知时间
    string date = 5;

    // 通知连接
    string url = 6;

    // 通知图片
    Picture picture = 7;
}

// 消息实体
message ChatMessage {
    // 消息ID
    string msg_id = 1;

    // 消息内容类型(图片/视频/文本/语音/文件)
    int32 chat_type = 2;

    // 文本实体
    Text text = 3;

    // 图片实体
    Picture picture = 4;

    // 视频实体
    Video video = 5;

    // 语音实体
    Voice voice = 6;

    // 文件实体
    File file = 7;
}

// 图片结构体
message Picture {
    // 原图下载URL
    string url = 1;

    // 缩略图
    bytes thumbnail = 2;

    // 当前坐标
    int64 pos = 3;

    // 当前文件内容大小
    int64 length = 4;
}

// 视频结构体
message Video {
    // 原视频下载URL
    string url = 1;

    // 缩略图
    bytes thumbnail = 3;

    // 当前坐标
    int64 pos = 4;

    // 当前文件内容大小
    int64 length = 5;
}

// 语音结构体
message Voice {
    // 语音
    bytes content = 1;

    // 当前坐标
    int64 pos = 2;

    // 当前文件内容大小
    int64 length = 3;
}

// 文本结构体
message Text {
    // 文本内容
    string content = 1;

    // 文本长度
    string length = 2;
}

// 文件结构体
message File {
    // 原文件下载URL
    string url = 1;

    // 当前坐标
    int64 pos = 2;

    // 当前文件内容大小
    int64 length = 3;
}

// 搜索条件结构体（防止以后加条件，直接设置实体）
message Search {
    // 搜索条件
    string keyword = 1;
}

//游客离线消息实体
message TouristFriendOffMessage{
    // 消息ID
    string msg_id = 1;

    // 消息内容类型(图片/视频/文本/语音/文件)
    int32 chat_type = 2;

    // 文本实体
    Text text = 3;

    // 图片实体
    Picture picture = 4;

    // 视频实体
    Video video = 5;

    // 语音实体
    Voice voice = 6;

    // 文件实体
    File file = 7;

    //消息发送者用户ID
    string msg_from_user_id = 8;

    //消息时间戳
    string msg_time = 9;

    // 游客好友实体
    TouristsFriend tourists_friend = 10;

}

//注册用户离线消息实体
message RegistFriendOffMessage{
    // 消息ID
    string msg_id = 1;

    // 消息内容类型(图片/视频/文本/语音/文件)
    int32 chat_type = 2;

    // 文本实体
    Text text = 3;

    // 图片实体
    Picture picture = 4;

    // 视频实体
    Video video = 5;

    // 语音实体
    Voice voice = 6;

    // 文件实体
    File file = 7;

    //消息发送者用户ID
    string msg_from_user_id = 8;

    //消息时间戳
    string msg_time = 9;

    // 游客好友实体
    RegisteredFriend registeredFriend = 10;

}